--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -10,22 +10,25 @@
             <a class="nav-link active" aria-current="page" href="{{ path('show_home') }}">Accueil</a>
           </li>
 
+          {% if not app.user %}
           <li class="nav-item">
-            <a class="nav-link" href="#">S'inscrire</a>
+            <a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Se connecter</a>
+            <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
           </li>
-
+          {% else %}
           <li class="nav-item">
             <a class="nav-link" href="#">Mon compte</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Se déconnecter</a>
+            <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
           </li>
+        {% endif %}
 
+        {% if is_granted('ROLE_ADMIN') %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Espace Admin
@@ -37,6 +40,7 @@
               <li><a class="dropdown-item" href="#">Ajouter une catégorie</a></li>
             </ul>
           </li>
+        {% endif %}
          
         </ul>
       </div>
