--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -34,7 +34,7 @@
               Espace Admin
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Dashboard</a></li>
+              <li><a class="dropdown-item" href="{{ path('show_dashboard') }}">Dashboard</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Ajouter un article</a></li>
               <li><a class="dropdown-item" href="#">Ajouter une catégorie</a></li>
