--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -37,7 +37,7 @@
               <li><a class="dropdown-item" href="{{ path('show_dashboard') }}">Dashboard</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Ajouter un article</a></li>
-              <li><a class="dropdown-item" href="#">Ajouter une catégorie</a></li>
+              <li><a class="dropdown-item" href="{{ path('create_category') }}">Ajouter une catégorie</a></li>
             </ul>
           </li>
         {% endif %}
