--- a/templates/admin/show_archive.html.twig
+++ b/templates/admin/show_archive.html.twig
@@ -62,8 +62,8 @@
                         <td>{{ category.alias }}</td>
                         <td>{{ category.createdAt | date('d/m/Y') }}</td>
                         <td>
-                            <a href="{{ path('restore_categorie', {'id': category.id}) }}" class="text-primary" title="Restaurer la catégorie"><i class="bi bi-reply-all-fill"></i></a>
-                            <a href="{{ path('hard_delete_categorie', {'id': category.id}) }}" class="text-danger" title="Supprimer définitivement la catégorie" onclick="return confirm('Voulez-vous vraiment supprimer définitivement cette catégorie ?')"><i class="bi bi-x-circle"></i></a>
+                            <a href="{{ path('restore_category', {'id': category.id}) }}" class="text-primary" title="Restaurer la catégorie"><i class="bi bi-reply-all-fill"></i></a>
+                            <a href="{{ path('hard_delete_category', {'id': category.id}) }}" class="text-danger" title="Supprimer définitivement la catégorie" onclick="return confirm('Voulez-vous vraiment supprimer définitivement cette catégorie ?')"><i class="bi bi-x-circle"></i></a>
                         </td>
                     </tr>
 
