includes categories in_nav with render
+css

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -16,3 +16,9 @@ body{
 .content{
     flex-grow: 1;
 }
+
+.item-hover:hover {
+    color: #ffc107 !important;
+    border-bottom: 2px solid #c39405 !important;
+    transition: ease-in-out 0.1s;
+}
