Make CRUD + handle File Upload + img contraints + queryBuilder for Category in ArticleFormType

--- a/templates/admin/show_archive.html.twig
+++ b/templates/admin/show_archive.html.twig
@@ -32,6 +32,48 @@
 
             <h2 class="text-center">Tous les articles archivés</h2>
 
+            <table class="table">
+
+                <thead>
+                <tr class="text-center">
+                    <th>#</th>
+                    <th>Titre</th>
+                    <th>Catégorie</th>
+                    <th>Photo</th>
+                    <th>Auteur</th>
+                    <th>Commenté</th>
+                    <th>Créé le</th>
+                    <th>Modifié le</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                {% for article in articles %}
+
+                    <tr class="text-center align-middle">
+
+                        <td>{{ article.id }}</td>
+                        <td>{{ article.title | length > 20 ? article.title | slice(0,20) ~ '...' : article.title }}</td>
+                        <td>{{ article.category.name }}</td>
+                        <td><img width="150" height="150" class="img-fluid" src="{{ asset('uploads/' ~ article.photo) }}" alt="{{ article.title }}"></td>
+                        <td>{{ article.author.fullname }}</td>
+                        <td>{{ article.commentaries is empty ? 'Non' : 'Oui' }}</td>
+                        <td>{{ article.createdAt | date('d/m/Y') }}</td>
+                        <td>{{ article.deletedAt | date('d/m/Y') }}</td>
+                        <td>
+                            <a href="{{ path('restore_article', {'id': article.id}) }}" class="btn btn-sm btn-info" title="Modifier"><i class="bi bi-reply-all-fill"></i></a>
+                            <a href="{{ path('hard_delete_article', {'id': article.id}) }}" onclick="return confirm('Voulez-vous vraiment supprimer définitivement cet article ?')" class="btn btn-sm btn-danger" title="Archiver"><i class="bi bi-x-circle"></i></a>
+                        </td>
+                    </tr>
+
+                {% endfor %}
+
+                </tbody>
+
+            </table>
+
+
         </div>
     </div>
     {# ################# TABLE 1 ################# #}
@@ -46,7 +88,8 @@
 
             <table class="table">
                 <thead>
-                    <tr class="texte-center">
+                    <tr class="text-center">
+                        <th>#</th>
                         <th>Nom</th>
                         <th>Alias</th>
                         <th>Créée le</th>
@@ -55,19 +98,20 @@
                 </thead>
                 <tbody>
 
-                    {% for category in categories %}
+                {% for category in categories %}
 
-                    <tr class="text-center align-middle">
+                    <tr class="text-center">
+                        <td>{{ category.id }}</td>
                         <td>{{ category.name }}</td>
                         <td>{{ category.alias }}</td>
                         <td>{{ category.createdAt | date('d/m/Y') }}</td>
                         <td>
-                            <a href="{{ path('restore_category', {'id': category.id}) }}" class="text-primary" title="Restaurer la catégorie"><i class="bi bi-reply-all-fill"></i></a>
+                            <a href="{{ path('restore_category', {'id': category.id}) }}" class="text-info" title="Restaurer la catégorie"><i class="bi bi-reply-all-fill"></i></a>
                             <a href="{{ path('hard_delete_category', {'id': category.id}) }}" class="text-danger" title="Supprimer définitivement la catégorie" onclick="return confirm('Voulez-vous vraiment supprimer définitivement cette catégorie ?')"><i class="bi bi-x-circle"></i></a>
                         </td>
                     </tr>
 
-                    {% endfor %}
+                {% endfor %}
 
                 </tbody>
             </table>
