--- a/templates/admin/show_dashboard.html.twig
+++ b/templates/admin/show_dashboard.html.twig
@@ -18,14 +18,14 @@
 
     {# ################# BUTTONS ################# #}
     <div class="row my-5 mx-auto">
-        <div class="col-4">
-            <a class=" btn btn-sm btn-outline-dark" href="{{ path('create_article') }}">Ajouter un article</a>
+        <div class="col-2">
+            <a class="btn btn-sm btn-outline-dark" href="{{ path('create_article') }}">Ajouter un article</a>
         </div>
-        <div class="col-4">
+        <div class="col-2">
             <a class=" btn btn-sm btn-outline-dark" href="{{ path('create_category') }}">Ajouter une catégorie</a>
         </div>
-        <div class="col-4">
-            <a class=" btn btn-sm btn-outline-dark" href="{{ path('show_archive')}}">Voir les archives</a>
+        <div class="col-2">
+            <a class="btn btn-sm btn-outline-dark" href="{{ path('show_archive') }}">Voir les archives</a>
         </div>
     </div>
     {# ################# BUTTONS ################# #}
@@ -38,6 +38,46 @@
 
             <h2 class="text-center">Tous les articles</h2>
 
+            <table class="table">
+
+                <thead>
+                <tr class="text-center">
+                    <th>#</th>
+                    <th>Titre</th>
+                    <th>Catégorie</th>
+                    <th>Photo</th>
+                    <th>Auteur</th>
+                    <th>Commenté</th>
+                    <th>Créé le</th>
+                    <th>Modifié le</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                    {% for article in articles %}
+
+                        <tr class="text-center align-middle">
+
+                            <td>{{ article.id }}</td>
+                            <td>{{ article.title | length > 20 ? article.title | slice(0,20) ~ '...' : article.title }}</td>
+                            <td>{{ article.category.name }}</td>
+                            <td><img width="150" height="150" class="img-fluid" src="{{ asset('uploads/' ~ article.photo) }}" alt="{{ article.title }}"></td>
+                            <td>{{ article.author.fullname }}</td>
+                            <td>{{ article.commentaries is empty ? 'Non' : 'Oui' }}</td>
+                            <td>{{ article.createdAt | date('d/m/Y') }}</td>
+                            <td>{{ article.updatedAt | date('d/m/Y') }}</td>
+                            <td>
+                                <a href="{{ path('update_article', {'id': article.id}) }}" class="btn btn-sm btn-info" title="Modifier"><i class="bi bi-pencil-square"></i></a>
+                                <a href="{{ path('soft_delete_article', {'id': article.id}) }}" class="btn btn-sm btn-danger" title="Archiver"><i class="bi bi-trash3"></i></a>
+                            </td>
+                        </tr>
+
+                    {% endfor %}
+
+                </tbody>
+
+            </table>
 
         </div>
     </div>
@@ -51,28 +91,32 @@
 
             <h2 class="text-center">Toutes les catégories</h2>
 
-            {# EXERCICE : Faire une table HTML qui affichera toutes les catégories de la BDD #}
+        {# EXERCICE : Faire une table HTML qui affichera toutes les catégories de la BDD #}
+
             <table class="table">
                 <thead>
                     <tr class="text-center">
-                        <th>Categorie</th>
+                        <th>#</th>
+                        <th>Nom</th>
                         <th>Alias</th>
-                        <th>Céée le</th>
+                        <th>Créée le</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
+
                     {% for category in categories %}
 
-                    <tr class="text-center align-middle">
-                        <td>{{ category.name }}</td>
-                        <td>{{ category.alias }}</td>
-                        <td>{{ category.createdAt | date('d/m/Y') }}</td>
-                        <td>
-                            <a href="{{ path('update_category', {'id': category.id}) }}" class="text-primary" title="Modifier la catégorie"><i class="bi bi-pencil-square"></i></a>
-                            <a href="{{ path('soft_delete_category', {'id': category.id}) }}" class="text-danger" title="Archiver la catégorie"><i class="bi bi-trash3"></i></a>
-                        </td>
-                    </tr>
+                        <tr class="text-center">
+                            <td>{{ category.id }}</td>
+                            <td>{{ category.name }}</td>
+                            <td>{{ category.alias }}</td>
+                            <td>{{ category.createdAt | date('d/m/Y') }}</td>
+                            <td>
+                                <a href="{{ path('update_category', {'id': category.id}) }}" class="text-info" title="Modifier la catégorie"><i class="bi bi-pencil-square"></i></a>
+                                <a href="{{ path('soft_delete_category', {'id': category.id}) }}" class="text-danger" title="Archiver la catégorie"><i class="bi bi-trash3"></i></a>
+                            </td>
+                        </tr>
 
                     {% endfor %}
                 </tbody>
@@ -81,13 +125,13 @@
         </div>
         {# ################# TABLE 2 ################# #}
 
-    {# -------------------------------------------------------------------------------------------------- #}
+        {# -------------------------------------------------------------------------------------------------- #}
 
         {# ################# TABLE 3 ################# #}
         <div class="col-6">
             <h2 class="text-center">Tous les utilisateurs</h2>
 
-           
+
         </div>
         {# ################# TABLE 3 ################# #}
     </div>
