--- a/templates/render/categories_in_nav.html.twig
+++ b/templates/render/categories_in_nav.html.twig
@@ -3,7 +3,7 @@
 
         {% for category in categories %}
 
-            <a href="" class="text-decoration-none text-dark item-hover">{{ category.name | capitalize }}</a>
+            <a href="{{ path('show_articles_from_cat', {'alias': category.alias} )}}" class="text-decoration-none text-dark item-hover">{{ category.name | capitalize }}</a>
 
         {% endfor %}
 
