--- a/templates/default/show_article.html.twig
+++ b/templates/default/show_article.html.twig
@@ -1,38 +1,69 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article {{ category.name }} {% endblock %}
+{% block title %}Article {{ article.title }}{% endblock %}
 
 {% block body %}
-    <h1 class="text-center my-4">Catégorie {{ category.name }}</h1>
 
-    <div class="ow">
+    <div class="row">
         <div class="col-10 mx-auto my-3">
-
             {% include 'include/_flashes.html.twig' %}
-
         </div>
     </div>
 
-    <div class="ow">
+    <div class="row">
         <div class="col-10 mx-auto my-4">
-            <div class="class">
-                <div class="class-header">
+
+            <div class="card">
+                <div class="card-header">
                     <h1 class="text-center card-title mb-5">{{ article.title | capitalize }}</h1>
                     <h4 class="text-center text-secondary mb-3">{{ article.subtitle | capitalize }}</h4>
                 </div>
-                <ul class="list-group list-gorup-flush">
-                    <li class="list-group-item text-center text-muted">Créé le {{ article.createdAt | ago(locale='fr') }} | Auteur : <u class="text-underline">{{ article.author.fullname }}</u></li>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-center text-muted">Créé {{ article.createdAt | ago(locale='fr') }} | Auteur : <u class="text-underline">{{ article.author.fullname }}</u></li>
                 </ul>
 
-                <img src="{{ asset('uploads/' ~ article.photo) }}" alt="{{ article.title }}" class="img-fluid">
+                <img height="450" src="{{ asset('uploads/' ~ article.photo) }}" alt="" class="img-custom">
 
                 <div class="card-body">
                     <p class="card-text col-8 mx-auto text-center my-4">{{ article.content | raw }}</p>
                 </div>
-
             </div>
 
         </div>
     </div>
 
+    {{ render(url('add_commentary', {'id': article.id} )) }}
+
+    <div class="row">
+        <div class="col-6 mx-auto">
+
+            <h3 class="mb-4">Espace Commentaires :</h3>
+
+            {% for commentary in commentaries | reverse %}
+
+                <div class="alert alert-dark mb-3" role="alert">
+                    <h4 class="alert-heading">{{ commentary.author.fullname}} <span class="h6">posté {{ commentary.createdAt | ago(locale='fr') }}</span></h4>
+                    <p>{{ commentary.comment }}</p>
+                    <hr>
+
+                    <p class="mb-0 col">Partager :
+                        <a href=""><i class="bi bi-instagram"></i></a>
+                        <a href=""><i class="bi bi-twitter"></i></a>
+                        <a href=""><i class="bi bi-facebook"></i></a>
+
+                        {% if app.user is same as commentary.author %}
+                            <a href="{{ path('soft_delete_commentary', {'id': commentary.id}) }}?article_id={{ article.id }}" class="btn btn-sm btn-danger"><i class="bi bi-x-circle-fill"></i></a>
+                        {% endif %}
+                    </p>
+                </div>
+            {% else %}
+                <div class="alert alert-warning mb-3" role="alert">
+                    <p class="text-center fw-bolder">Aucun commentaire pour cet article</p>
+                </div>
+            {% endfor %}
+
+        </div>
+    </div>
+
 {% endblock %}
+
