--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -36,7 +36,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{{ path('show_dashboard') }}">Dashboard</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Ajouter un article</a></li>
+              <li><a class="dropdown-item" href="{{ path('create_article') }}">Ajouter un article</a></li>
               <li><a class="dropdown-item" href="{{ path('create_category') }}">Ajouter une catégorie</a></li>
             </ul>
           </li>
