make profil + change password

--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -20,7 +20,7 @@
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="#">Mon compte</a>
+            <a class="nav-link" href="{{ path('show_profil') }}">Mon compte</a>
           </li>
 
           <li class="nav-item">
